--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.4.38",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-env": "^1.0.1"
   }
 }
